# LIRS2

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md
debug/: list.txt
result_set/w110/: w110-LIRS2
result_set/w111/: w111-LIRS2
src/: CMakeLists.txt  ThreadPool.h  cmake_install.cmake  main.cpp  replace.cc  replace.h  replace_arc.cc  replace_arc.h  replace_lirs2.cc  replace_lirs2.h  replace_lirs2_optimize.cc  replace_lirs2_optimize.h  replace_lirs_base.cc  replace_lirs_base.h  replace_lru.cc  replace_lru.h  replace_opt.cc  replace_opt.h  trace_handle.cc  trace_handle.h
src/sparsepp/: spp.h
trace_parameter/: 2_pools  Financial1  Financial2  SCAN  Zigzag  backf  cpp  gli  msr_src1  multi2  multi3  ps  w001  w002  w003  w004  w005  w006  w007  w008  w009  w010  w011  w012  w013  w015  w016  w017  w019  w020  w021  w023  w024  w025  w028  w029  w030  w031  w032  w033  (+55 more)
traces/: SCAN  Zigzag  cs  w2_pools  wbackf
